Correctly handle styling of sidebar on small screens

--- a/cassdegrees/static/css/style.css
+++ b/cassdegrees/static/css/style.css
@@ -354,3 +354,15 @@ select.text{
 .auto-overflow {
     overflow: auto;
 }
+
+/* Display a border if the element is the side */
+.border-on-md {
+    /* Fill the row */
+    width: 100%;
+}
+
+@media only screen and (min-width:64em) {
+    .border-on-md {
+        border-left: 1px solid black;
+    }
+}
